wip: tweet buttons colors

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -64,6 +64,7 @@
   --warning: #ffc107;
   --danger: #dc3545;
   --danger-dark: #3d0105;
+  --like-red: #c51104;
   --light: #f8f9fa;
   --dark: #343a40;
   --dark-hover: #484d53;
