--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,6 +63,7 @@
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
+  --danger-hover: #cb2434;
   --danger-dark: #3d0105;
   --like-red: #c51104;
   --light: #f8f9fa;
