feat: follow button

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,6 +67,7 @@
   --danger-dark: #3d0105;
   --like-red: #c51104;
   --light: #f8f9fa;
+  --light-hover: #d6d7d9;
   --dark: #343a40;
   --dark-hover: #484d53;
   --link-color: #007bff;
