--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -144,3 +144,10 @@ button:focus-visible {
     font-size: 8px;
   }
 }
+
+.zoom [data-rmiz-modal-overlay='visible'] {
+  background-color: var(--black);
+}
+.zoom [data-rmiz-btn-unzoom] {
+  background-color: var(--twitter-blue);
+}
